# braiinz-education

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/legal/: 2026-04-18-compliance-matrix-france.md
src/: base_agent.py  guardrails.py  llm_router.py  student_profile.py
src/agents/: coach_pratique.py  diagnostiqueur.py  tuteur_socratique.py
src/bot/: handlers.py  telegram_bot.py
src/curriculum/: loader.py  pack_fr_maths_seconde.json
tests/: conftest.py  test_base_agent.py  test_coach_pratique.py  test_curriculum_loader.py  test_diagnostiqueur.py  test_guardrails.py  test_integration.py  test_llm_router.py  test_student_profile.py  test_telegram_handlers.py  test_tuteur_socratique.py
