[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "braiinz-education"
version = "0.1.0"
description = "Open-source AI educational agents — Tuteur Socratique, Coach Pratique, Diagnostiqueur"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Mourad Barkaoui", email = "m.barkaoui@braiinz.fr" }]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "python-telegram-bot>=21.0",
    "fsrs>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
